<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="dowlingandlainandtommymertell.chinesemedicinalapplication.HerbsActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="10dp"
    >
        <TextView
                android:text="@string/herb_title"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/herb_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textSize="16sp"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

    >
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >
                <TextView
                        android:text="@string/herb_1_ginseng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_1_ginseng_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_2_Ginko"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_2_Ginko_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_3_shitake_mushrooms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_3_sh_mush_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_4_Dang_Gui"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_4_Dang_Gui_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_5_Cinnamon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_5_Cinnamon_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_6_Ginger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_6_Ginger_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_7_Licorice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_7_Licorice_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_8_Ephedra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_8_Ephedra_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_9_Peony"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_9_Peony_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_10_Rhubarb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_10_Rhubarb_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
                <TextView
                        android:text="@string/herb_11_Salvia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="22sp"/>
                <TextView
                        android:text="@string/herb_11_Salvia_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:textSize="16sp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
