<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="dowlingandlainandtommymertell.chinesemedicinalapplication.FireRecipesActivity">
    <TextView
            android:text="@string/fire_element_diet_title"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
    />
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
    >
        <TextView
                android:text="@string/fire_element_diet_description"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </ScrollView>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        >
            <TextView
                    android:text="@string/fire_recipe_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/fire_recipe_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/fire_recipe_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/fire_recipe_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/fire_recipe_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
